# fastapi_generator

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  CONTRIBUTING_EN.md  LICENSE  MANIFEST.in  README.md  README_CN.md  README_EN.md  pyproject.toml  pytest.ini  setup.py
.github/workflows/: publish-testpypi.yml  publish.yml  python-tests.yml  test.yml
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: user.py
docs/: FastAPI通用脚手架功能清单.md  TODO.md  功能驱动开发提示词.md  开发前设计文档清单.md  开发规范-功能驱动开发.md  技术架构设计.md  用户故事.md  需求分析.md  项目定位.md  项目结构设计.md
docs/en/: installation.md  pypi_publishing_guide.md  usage.md
docs/todo/v0.1.0/: TODO.md
docs/zh/: PyPI发布指南.md  使用指南.md  安装指南.md
examples/: generate_todo_app.py  migration_example.py
src/fastapi_generator/: __init__.py
src/fastapi_generator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/fastapi_generator/cli/: __init__.py  main.py
src/fastapi_generator/core/: project_creator.py
src/fastapi_generator/generators/: __init__.py  api_generator.py  migration_generator.py  model_generator.py  service_generator.py
src/fastapi_generator/templates/project/basic/{{project_name}}/: .gitignore.j2  README.md.j2  main.py.j2  requirements.txt.j2
src/fastapi_generator/templates/project/standard/{{project_name}}/: .gitignore.j2  README.md.j2  alembic.ini.j2  main.py.j2  requirements.txt.j2
src/fastapi_generator/templates/project/standard/{{project_name}}/app/api/: __init__.py.j2
src/fastapi_generator/templates/project/standard/{{project_name}}/app/core/: config.py.j2
src/fastapi_generator/templates/project/standard/{{project_name}}/app/db/: base.py.j2  session.py.j2
src/fastapi_generator/templates/project/standard/{{project_name}}/migrations/: README.md.j2  __init__.py.j2  env.py.j2
src/fastapi_generator/utils/: path_utils.py  string_utils.py
tests/: test_migration_generator.py  test_utils.py
tests/cli/: __init__.py  test_main.py
tests/core/: __init__.py  test_project_creator.py
tests/generators/: __init__.py  test_api_generator.py  test_model_generator.py  test_service_generator.py
tests/integration/: __init__.py  test_code_validity.py  test_end_to_end.py  test_file_validation.py
(+4 files in other folders)
