[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-generator"
dynamic = ["version"]
description = "FastAPI项目代码生成工具"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "源滚滚AI编程", email = "pygosuperman@outlook.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    "fastapi>=0.100.0",
    "sqlmodel>=0.0.8",
    "typer>=0.9.0",
    "jinja2>=3.1.2",
    "pydantic>=2.0.0",
    "click>=8.1.3",
    "rich>=13.5.0",
    "alembic>=1.12.0",
]

[project.urls]
Homepage = "https://github.com/yggai/fastapi_generator"
Issues = "https://github.com/yggai/fastapi_generator/issues"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
fg = "fastapi_generator.cli.main:app"

[tool.setuptools.dynamic]
version = {attr = "fastapi_generator.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3 